--- a/examples/chat/chat.html
+++ b/examples/chat/chat.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="learn javascript by www.liaoxuefeng.com">
+    <meta name="description" content="learn dmicro">
     <title>websocket</title>
     <link rel="stylesheet" href="./static/css/bootstrap.css">
     <script src="./static/js/jquery.min.js"></script>
